--- a/atlasyol_float/style.css
+++ b/atlasyol_float/style.css
@@ -1,48 +1,46 @@
 *{
     box-sizing: border-box;
 }
+a{
+  color: black;
+  text-decoration: none;
+}
 body{
     width: 100vw;
     height: auto;
     margin: 0;
-}
-.background-image{
-  height: 20vh;
-  background: url("./img/body.png");
-  min-width: 100%;
-  min-height: auto;
-  position: absolute;
+    background: url("./img/body.png");
+    background-repeat: repeat-x;
 }
 .main-container{
   top: 10vh;
   margin: 0 25%;
   position: relative;
 }
-.header{
-    min-width: 100%;
-}
 .header-contact{
     display: inline;
     float: right;
 }
 .header-icon-language-flags{
+    margin-top: 16px;
     float: right;
 }
-.navbar table{
-    width: 100%;
-    height: 5%;
+.navbar ul{
+    width: 50vw;
+    height: auto;
     margin: 20px 0;
+    border: 1px solid black;
 }
-.navbar-list td{
+.navbar-list li{
     font-size: 12px;
     padding: 10px;
     display: inline-block;
-    border: 0.25px solid black;
+    border-right: 0.25px solid black;
 }
-#navbar-last-item{
-    padding-right: 273px;
+.navbar-list li:last-child{
+    border-right: none;
 }
-.home-main{
+main{
     clear: left;
 }
 .home-main img{
@@ -53,7 +51,7 @@ body{
 }
 .home-main p{
     clear: left;
-    padding: 5vh;
+    padding: 16px;
     text-align: center;
 }
 
@@ -61,15 +59,18 @@ body{
     display: inline;
     position: relative;
 }
-.home-list01, .home-list02,  .home-list03{
-    width: 33%;
+.home-list{
+    width: 33.3%;
     float: left;
 }
 .home-bottom img{
     float: left;
 }
-.home-list-01-header, .home-list-02-header, .home-list-03-header{
-    margin: 10px;
+.home-list-body{
+    clear: left;
+}
+.home-list-header{
+    margin: 5px;
     display: inline ;
 }
 .home-bottom h5{
