--- a/gurcuoglu_flex/style.css
+++ b/gurcuoglu_flex/style.css
@@ -1,25 +1,29 @@
 *{
     box-sizing: border-box;
 }
+a{
+    color: inherit;
+    text-decoration: none;
+}
 body{ 
-    width: 70%;
+    width: 80%;
     height: auto;
-    margin: 0 15%;
+    margin: 0 10%;
     position: relative;
 }
 .header{
     min-width: 100%;
-    height: 100%;
+    height: auto;
     margin-bottom: 20px;
     height: auto;
     display: flex;
 }
 .navbar{
+    width: 100%;
+    height: auto;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    width: 100%;
-    height: auto;
 }
 .navbar-list{
     width: 100%;
@@ -44,11 +48,8 @@ body{
 .banner img{
     width: 100%;
 }
-.home-main{
-    clear: left;
-}
 .home-main-buttons{
-    margin: 2vh 0;
+    margin: 16px 0;
     width: 100%;
     height: auto;
     display: flex;
@@ -73,11 +74,11 @@ body{
     flex-direction: column;
     align-items: space-between;
 }
-.home-haberler aside{
+.home-haberler-aside{
     margin: 5px 0;
     display: flex;
 }
-.home-haberler p{
+.home-haberler p, .home-haberler time{
     margin: 0 5px;
 }
 
@@ -88,7 +89,8 @@ body{
 
 footer{
     width: 100%;
-    height: 5vh;
+    height: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
