--- a/lkd_responsive/style.css
+++ b/lkd_responsive/style.css
@@ -10,13 +10,13 @@ a{
 }
 header{
   display: flex;
-  margin-bottom: 2%;
+  margin-bottom: 2rem;
 }
 header .logo{
   display: inline;
 }
 header .logo img{
-  width: 90%;
+  max-width: 90%;
   height: auto;
 }
 nav{
@@ -40,15 +40,19 @@ nav ul li{
   display: inline-block;
   padding: 2% 5%;
 }
+.banner{
+  max-width: 100%;
+  height: 70vh;
+}
 .banner img{
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .news .title{
   width: 100%;
   height: auto;
-  margin: 2% 0px;
+  margin: 15px 0px;
   text-align: center;
   font-weight: bold;
 }
@@ -80,31 +84,31 @@ nav ul li{
 }
 footer{
     background-color: lightgray;
-    margin-top: 2%;
-    padding: 1.5%;
+    margin-top: 15px;
+    padding: 1em;
     display: flex;
     justify-content: center;
 }
 .contact{
     height: auto;
     padding: 1px;
-    margin-right: 1vw;
+    margin-right: 1em;
     display: flex;
     justify-content: center;
 }
-.contact p{
+.contact address{
     display: inline;
 }
 .contact input{
     max-width: 100%;
     height: auto;
-    margin: 0px 1vw;
+    margin: 0px 1em;
 }
 .copyright{
     display: flex;
     align-items: center;
 }
 .copyright p{
-    padding-left: 1vw;
+    padding-left: 1em;
     border-left: 1px solid black;
 }
