--- a/csszengarden/style.css
+++ b/csszengarden/style.css
@@ -1,10 +1,62 @@
+@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One|Libre+Baskerville:400,400italic);
+
 *{
   box-sizing: border-box;
+  font-family: 'Libre Baskerville', sans-serif;
 }
+
 a{
     color: inherit;
     text-decoration: none;
 }
-.container{
-  
+h1, h3{
+    font-family: 'Julius Sans One', sans-serif;
+}
+header{
+  width: 100%;
+  height: auto;
+}
+.banner{
+  width: 100%;
+  height: 310px;
+  display: flex;
+  align-items: center;
+  border-top: 12px solid rgba(26, 69, 70, 0.8);
+  background-image: url("./assets/contours.png"), url("./assets/gridlines.png"), url("./assets/huntington.jpg");
+  background-position: 0 0, -5px -35px, 0 50%;
+  background-repeat: repeat, repeat, no-repeat;
+  background-size: auto, auto, cover;
+}
+.banner-items{
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  align-content: center;
+  margin-left: 10%;
+}
+.banner-header{
+  max-width: 100%;
+  height: auto;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 40px;
+  font-size: 3.25rem;
+}
+.banner-header h2{
+  font-size: 1.75rem;
+  font-style: italic;
+  margin: 10px 5px;
+  color: rgba(255, 255, 255, 0.75);
+}
+.banner-icon img{
+  width: 125px;
+  height: auto;
+}
+
+main .text{
+  max-width: 100%;
+  height: auto;
+  margin: 5% 5% 5% 10% ;
 }
